<resources>

    <string name="app_name">HoApp</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="content_description">image</string>
    <string name="title_login">ĐĂNG NHẬP TÀI KHOẢN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Mật khẩu</string>
    <string name="lbl_forgot_password">Quên mật khẩu?</string>
    <string name="btn_lbl_login">Đăng nhập</string>
    <string name="not_have_account">Chưa có tài khoản?</string>
    <string name="register"><u>Bấm để đăng ký</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Tên</string>
    <string name="hint_first_name">Họ và Tên lót</string>
    <string name="et_hint_confirm_password">Nhập lại mật khẩu</string>
    <string name="i_agree_to_the_terms_and_condition">Tôi đồng ý với điều khoản người dùng</string>
    <string name="btn_lbl_register">Đăng ký</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="login"><u>Bấm để đăng nhập</u></string>
    <string name="err_msg_enter_first_name">Nhập Tên</string>
    <string name="err_msg_enter_last_name">Nhập Họ</string>
    <string name="err_msg_enter_email">Nhập email</string>
    <string name="err_msg_enter_password">Nhập mật khẩu</string>
    <string name="err_msg_enter_confirm_password">Nhập lại mật khẩu</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Mật khẩu và nhập lại mật khẩu khác nhau</string>
    <string name="err_msg_agree_terms_and_condition">Hãy tick vào mục đồng ý điều khoản</string>
    <string name="register_successful">Đăng ký thành công!</string>
    <string name="please_wait">Vui lòng chờ&#8230;</string>
    <string name="title_forgot_password">QUÊN MẬT KHẨU?</string>
    <string name="forgot_password_title_description">Nhập email và chúng tôi sẽ gửi cách thay đổi mật khẩu đến email đó</string>
    <string name="btn_lbl_summit">Gửi</string>
    <string name="email_sent_success">Đã gửi email để thay đổi mật khẩu</string>
    <string name="title_complete_profile">HỒ SƠ KHÁCH HÀNG</string>
    <string name="title_edit_profile">Thay đổi thông tin hồ sơ</string>
    <string name="et_hint_mobile_number">Số điện thoại</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Lưu thông tin</string>
    <string name="read_storage_permission_denied">Xin vào hồ sơ và cung cấp quyền cho chúng tôi</string>
    <string name="image_selection_failed">Chọn ảnh thất bại</string>
    <string name="err_msg_enter_mobile_number">Số điện thoại không khả dụng</string>
    <string name="msg_profile_update_success">Hồ sơ của quý khách đã được cập nhật</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Đăng xuất</string>
    <string name="product_info">Product Information</string>
    <string name="err_msg_enter_product_name">Enter the product name</string>
    <string name="err_msg_enter_product_category">Enter the product category</string>
    <string name="err_msg_enter_product_price">Enter the product price</string>
    <string name="err_msg_enter_product_amount">Enter the product amount</string>
    <string name="err_msg_enter_product_barCode">Enter the product barcode</string>
    <string name="err_msg_enter_product_brand">Enter the product brand</string>
    <string name="err_msg_enter_product_made_in">Enter the product made in</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="justshop">JustShop</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- <string name="title_activity_dashboard">MainActivity</string> -->
    <string name="title_home">Home</string>
    <string name="title_products">Sản phẩm</string>
    <string name="title_orders">Đơn hàng</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_twice_in_2s_to_exit">Please click twice in 2s to exit.</string>
    <string name="action_settings">Action Settings</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_price">Price</string>
    <string name="product_amount">Quantity</string>
    <string name="product_purchase">PURCHASE</string>
    <string name="buy">Buy</string>
    <string name="buy_complete">Buy Complete</string>
    <string name="image">Image</string>
    <string name="view">VIEW</string>
    <string name="add_new_product">Add New Product</string>
    <string name="admin_screen">ADMIN SCREEN</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="modify_product">Modify Product</string>
    <string name="amount">Amount</string>
    <string name="list_all_products">List all products</string>
    <string name="qr_image">qr_image</string>
    <string name="barcode">Barcode</string>
    <string name="list_products">List Products</string>
    <string name="product_avatar">Product Avatar</string>
    <string name="imageview">ImageView</string>
    <string name="search_data">Search Data</string>
    <string name="search_product">Search Product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="delete">Delete</string>

    <string name="payment_through_momo">Thanh toán bằng MoMo</string>
    <string name="mapping_through_momo">Bắt đầu liên kết</string>
    <string name="link_momo">Liên kết MoMo</string>
    <string name="payment_momo">Thanh toán qua MoMo</string>
    <string name="not_receive_info">Không nhận được thông tin</string>
    <string name="not_receive_info_err">Không gởi được yêu cầu vui lòng kiểm tra lại</string>
    <string name="development_environment">Development Environment</string>
    <string name="merchant_code_your_merchant_code">Merchant Code: #your_merchant_code</string>
    <string name="merchant_name_your_merchant_name">Merchant Name: #your_merchant_name</string>
    <string name="input_amount_default_10_000">Input amount default 10.000đ</string>
    <string name="show_message">show message</string>
    <string name="add_products">Add Products</string>
    <string name="sales_dashboard">Sales Dashboard</string>
    <string name="dashboard_screen">Dashboard Screen</string>
    <string name="product_type_1">Product Type 1</string>
    <string name="product_type_2">Product Type 2</string>
    <string name="payment_preorder_shop">Đặt trước tại cửa hàng</string>
    <string name="return_home">Về trang chính</string>
    <string name="get_user_cart">Get user cart</string>
    <string name="receipt_date">Receipt date</string>
    <string name="receipt">Hóa đơn</string>
    <string name="sales_in_month">Sales In Month</string>
    <string name="product_searcher">Product Searcher</string>
    <string name="most_sale_product">Most Sale Product</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_ranking">User Ranking</string>
    <string name="user_name">User Name</string>
    <string name="user_rank">User Rank</string>
    <string name="user_point">User Point</string>
    <string name="action_qr">Action QR</string>
    <string name="back_to_admin">Back To Admin</string>
    <string name="refund_receipt">Refund Receipt</string>
    <string name="online_shopping">Mua hàng Online</string>
    <string name="pre_order">ORDER FROM CUSTOMER</string>
    <string name="online_order">Online Order</string>
    <string name="brand">Brand</string>
    <string name="made_in">Made in</string>

</resources>