<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Admin.AdminActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_admin_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.thesis_trading_app.utils.MTATextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="@dimen/toolbar_title_paddingEnd"
            android:text="@string/admin_screen"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/add_a_product"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/add_new_product"
        android:gravity="center"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_admin_activity" />

    <Button
        android:id="@+id/add_products"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/add_products"
        android:gravity="center"
        android:background="@color/colorSnackBarSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_a_product" />

    <Button
        android:id="@+id/list_all_products"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/list_all_products"
        android:gravity="center"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_products" />

    <Button
        android:id="@+id/sales_dashboard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/sales_dashboard"
        android:gravity="center"
        android:background="@color/colorSnackBarSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_all_products" />

    <Button
        android:id="@+id/get_user_cart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/get_user_cart"
        android:gravity="center"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sales_dashboard" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/btn_lbl_logout"
        android:gravity="center"
        android:background="@color/colorThemeOrange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_user_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>