<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/zxing_custom_possible_result_points"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:id="@+id/product_admin_section_1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="252dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_admin_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background"
                android:contentDescription="@string/product_avatar"
                android:scaleType="fitXY"
                android:src="@drawable/product_placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/product_admin_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_name"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:textSize="15sp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/product_admin_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_category"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:textSize="15sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_admin_amount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_amount"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:textSize="15sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_admin_price"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_price"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:textSize="15sp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_admin_section_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_admin_barcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorNormalText"
            android:textSize="15sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/modify_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/modify_product"
            android:textSize="20sp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>