<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/payment_product_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/product_amount"
        android:textSize="18sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/payment_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="12sp"
        android:textColor="@color/colorNormalText"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/payment_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorNormalText"
        android:layout_weight="2" />

</LinearLayout>