<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Admin.SalesDashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dashboard_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.trading.thesis_trading_app.utils.MTATextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="@dimen/toolbar_title_paddingEnd"
            android:text="@string/dashboard_screen"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/product_type1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:text="@string/product_type_1"
        android:gravity="center"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_dashboard_activity" />

    <Button
        android:id="@+id/product_type2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_marginTop="20dp"
        android:text="@string/product_type_2"
        android:gravity="center"
        android:background="@color/colorSnackBarSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_type1" />

    <Button
        android:id="@+id/most_product_sales"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_marginTop="20dp"
        android:text="@string/most_sale_product"
        android:gravity="center"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_type2" />

    <Button
        android:id="@+id/sales_in_month"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_marginTop="20dp"
        android:text="@string/sales_in_month"
        android:gravity="center"
        android:background="@color/colorSnackBarSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/most_product_sales" />

</androidx.constraintlayout.widget.ConstraintLayout>