<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:id="@+id/cart_product_section_1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cart_product_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:text="@string/image"
            android:textAlignment="textStart"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cart_product_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_name"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/cart_product_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_category"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorNormalText"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Số lượng:"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorNormalText"
                    android:layout_weight="1.5" />

                <Button
                    android:id="@+id/cart_product_remove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/remove_24"/>

                <TextView
                    android:id="@+id/cart_product_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textColor="@color/colorNormalText"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/cart_product_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_24"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_product_section_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cart_product_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Bỏ sản phẩm"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorNormalText"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>