<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:id="@+id/tvEnvironment"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:typeface="serif"
                android:text="Danh sách sản phẩm"
                android:textColor="#cd1076"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvTotalPrice"
                android:layout_height="wrap_content"
                android:text="Total  Price: "
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvTotalProduct"
                android:layout_height="wrap_content"
                android:text="Total Products: "
                android:textColor="#000"
                android:textSize="18sp"/>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiftRefresh"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_ordered_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:verticalSpacing="0dp"
                    android:horizontalSpacing="0dp"
                    android:scrollbarStyle="outsideOverlay"
                    android:verticalScrollbarPosition="right"
                    android:paddingBottom="60dp" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/btnPayMoMo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_through_momo"
                style="@style/Btn_Style_Confirm" />

            <Button
                android:id="@+id/btnPayRaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/payment_preorder_shop"
                android:background="@color/ic_launcher_background"/>

            <Button
                android:id="@+id/btnPayOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/online_shopping"
                android:background="@color/colorAccent"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

